--- a/nnet/Makefile
+++ b/nnet/Makefile
@@ -1,7 +1,8 @@
-all: test
+all: op
 
-test: test.cpp
+unop: test.cpp
 	g++ -std=c++11 test.cpp nnet.cpp nnet.h
-
+op: test.cpp
+	g++ -O3 -std=c++11 test.cpp nnet.cpp nnet.h
 clean:
 	rm *o testNet
